# buddy

./: .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
docs/: API_CONTRACTS.md  ARCHITECTURE.md  (+2 more)
services/api/: Dockerfile  pyproject.toml
services/api/src/exam_tutor_api/: db.py  main.py  middleware.py  redis_queue.py  settings.py
services/api/src/exam_tutor_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/api/src/exam_tutor_api/clients/: embed_client.py  llm_client.py
services/api/src/exam_tutor_api/routes/: chat.py  feedback.py  health.py  ingest.py  retrieve.py
services/api/src/exam_tutor_api/services/: memory_service.py  rag_service.py  tutor_modes.py
services/api/tests/: test_health.py
services/eval/: pyproject.toml
services/eval/data/: gold_gate.jsonl  gold_upsc.jsonl
services/eval/src/exam_tutor_eval/: cli.py  retrieval_metrics.py
services/eval/src/exam_tutor_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/worker/: Dockerfile  pyproject.toml
services/worker/src/exam_tutor_worker/: db.py  settings.py  worker.py
services/worker/src/exam_tutor_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/worker/src/exam_tutor_worker/jobs/: ingest_job.py
services/worker/src/exam_tutor_worker/pipelines/: chunk_filter.py  chunker.py  cleanup.py  normalize.py
services/worker/src/exam_tutor_worker/pipelines/extractors/: docling_extractor.py
services/worker/tests/: test_normalize.py
(+22 files in other folders)
