[project]
name = "exam-tutor-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1.0",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.2",
  "pgvector>=0.4.1",
  "redis>=5.0",
  "rq>=2.0",
  "uuid6>=2024.7.10",
  "exam-tutor-common",
  "exam-tutor-rag-core",
]

[tool.ruff]
line-length = 100
target-version = "py310"
