[project]
name = "exam-tutor-eval"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "exam-tutor-common",
  "exam-tutor-rag-core",
]

[project.scripts]
exam-tutor-eval = "exam_tutor_eval.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"
